--- a/backend/package.json
+++ b/backend/package.json
@@ -1,8 +1,6 @@
 {
   "devDependencies": {
+    "@prisma/client": "^6.15.0",
     "prisma": "^6.15.0"
-  },
-  "dependencies": {
-    "@prisma/client": "^5.17.0"
   }
 }
